Admin Dashboard Completed

--- a/admin.html
+++ b/admin.html
@@ -156,11 +156,11 @@
             }
         }
 
-        .border-bottoms{
+        .border-bottoms {
             border-bottom: 1px solid #cdcecf;
         }
 
-        .border-lefts{
+        .border-lefts {
             border-left: 5px solid #2f4050;
         }
     </style>
@@ -319,6 +319,100 @@
                 </div>
             </div>
 
+            <div class="content-section p-10">
+                <h2 class="text-black mb-6">Students Details</h2>
+
+                <div class="list-container bg-body px-6 rounded">
+
+                    <div class="row">
+
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled">
+                                <div class="d-flex align-items-center justify-content-between pe-16 pt-8 pb-2 border-bottoms">
+                                    <li class="fw-bold">First Name</li>
+                                    <li class="ms-20">Demo</li>
+                                </div>
+                                <div class="d-flex align-items-center justify-content-between pe-16 pt-8 pb-2 border-bottoms">
+                                    <li class="fw-bold">Last Name</li>
+                                    <li class="ms-20">Demo</li>
+                                </div>
+                                <div class="d-flex align-items-center justify-content-between pe-16 pt-8 pb-2 border-bottoms">
+                                    <li class="fw-bold">Email</li>
+                                    <li class="ms-20">Demo@gmail.com</li>
+                                </div>
+                                <div class="d-flex align-items-center justify-content-between pe-16 pt-8 pb-2 border-bottoms">
+                                    <li class="fw-bold">Phone Number</li>
+                                    <li class="ms-20">9900990090</li>
+                                </div>
+                                <div class="d-flex align-items-center justify-content-between pe-16 pt-8 pb-2 border-bottoms">
+                                    <li class="fw-bold">Gender</li>
+                                    <li class="ms-20">Demo</li>
+                                </div>
+                                <div class="d-flex align-items-center justify-content-between pe-16 pt-8 pb-2 border-bottoms">
+                                    <li class="fw-bold">Date Of Birth</li>
+                                    <li class="ms-20">Demo</li>
+                                </div>
+                                <div class="d-flex align-items-center justify-content-between pe-16 pt-8 pb-2 border-bottoms">
+                                    <li class="fw-bold">Blood Group</li>
+                                    <li class="ms-20">Demo</li>
+                                </div>
+                                <div class="d-flex align-items-center justify-content-between pe-16 pt-8 pb-2 border-bottoms">
+                                    <li class="fw-bold">Religion</li>
+                                    <li class="ms-20">Demo</li>
+                                </div>
+                                <div class="d-flex align-items-center justify-content-between pe-16 pt-8 pb-2 border-bottoms">
+                                    <li class="fw-bold">Caste</li>
+                                    <li class="ms-20">Demo</li>
+                                </div>
+                            </ul>
+                        </div>
+
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled">
+                                <div class="d-flex align-items-center justify-content-between pe-16 pt-8 pb-2 border-bottoms">
+                                    <li class="fw-bold">Roll No</li>
+                                    <li class="ms-20">Demo</li>
+                                </div>
+                                <div class="d-flex align-items-center justify-content-between pe-16 pt-8 pb-2 border-bottoms">
+                                    <li class="fw-bold">Admission ID</li>
+                                    <li class="ms-20">Demo</li>
+                                </div>
+                                <div class="d-flex align-items-center justify-content-between pe-16 pt-8 pb-2 border-bottoms">
+                                    <li class="fw-bold">Standard</li>
+                                    <li class="ms-20">Demo@gmail.com</li>
+                                </div>
+                                <div class="d-flex align-items-center justify-content-between pe-16 pt-8 pb-2 border-bottoms">
+                                    <li class="fw-bold">Section</li>
+                                    <li class="ms-20">9900990090</li>
+                                </div>
+                                <div class="d-flex align-items-center justify-content-between pe-16 pt-8 pb-2 border-bottoms">
+                                    <li class="fw-bold">Father Name</li>
+                                    <li class="ms-20">Demo</li>
+                                </div>
+                                <div class="d-flex align-items-center justify-content-between pe-16 pt-8 pb-2 border-bottoms">
+                                    <li class="fw-bold">Mother Name</li>
+                                    <li class="ms-20">Demo</li>
+                                </div>
+                                <div class="d-flex align-items-center justify-content-between pe-16 pt-8 pb-2 border-bottoms">
+                                    <li class="fw-bold">Father Occupation</li>
+                                    <li class="ms-20">Demo</li>
+                                </div>
+                                <div class="d-flex align-items-center justify-content-between pe-16 pt-8 pb-2 border-bottoms">
+                                    <li class="fw-bold">Mother Occupation</li>
+                                    <li class="ms-20">Demo</li>
+                                </div>
+                                <div class="d-flex align-items-center justify-content-between pe-16 pt-8 pb-2 border-bottoms">
+                                    <li class="fw-bold">Mole</li>
+                                    <li class="ms-20">Demo</li>
+                                </div>
+                            </ul>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
         </div>
         <!-- Content End -->
 
