Some Files Added here

--- a/footer.html
+++ b/footer.html
@@ -55,11 +55,11 @@
                         <a class="text-black mb-1" href="#">Grievance Committee</a>
                         <a class="text-black mb-1" href="#">Apply</a>
                         <a class="text-black mb-1" href="#">Disclosure</a>
-                        <a class="text-black mb-1" href="#">Research</a>
-                        <a class="text-black mb-1" href="#">Contact</a>
-                        <a class="text-black mb-1" href="#">Terms of Service</a>
-                        <a class="text-black mb-1" href="#">Privacy Policy</a>
-                        <a class="text-black" href="#">Refund Policy</a>
+                        <a class="text-black mb-1" href="research.html">Research</a>
+                        <a class="text-black mb-1" href="contact-us.html">Contact</a>
+                        <a class="text-black mb-1" href="terms-of-service.html">Terms of Service</a>
+                        <a class="text-black mb-1" href="privacy-policy.html">Privacy Policy</a>
+                        <a class="text-black" href="refund-policy.html">Refund Policy</a>
                     </div>
                 </div>
 
