--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                                 <h5 class="mb-2 fs-3 fw-bold text-black">Research</h4>
                             </div>
                             <div class="campus-btn rounded-0 rounded-bottom">
-                                <a class="fw-medium" href="courses.html">Read More<i
+                                <a class="fw-medium" href="research.html">Read More<i
                                         class="bi bi-chevron-double-right ms-2"></i></a>
                             </div>
                         </div>
