--- a/placement.html
+++ b/placement.html
@@ -138,10 +138,12 @@
                             <img class="mb-3" width="100%" src="assets/images/placement-companys/ZF_logo.svg" alt="">
                         </div>
                         <div class="text-center text-black p-2">
-                            <img class="mb-3" width="100%" src="assets/images/placement-companys/Knacktech-logo.png" alt="">
+                            <img class="mb-3" width="100%" src="assets/images/placement-companys/Knacktech-logo.png"
+                                alt="">
                         </div>
                         <div class="text-center text-black p-2">
-                            <img class="mb-3" width="100%" src="assets/images/placement-companys/qspiders_logo.png" alt="">
+                            <img class="mb-3" width="100%" src="assets/images/placement-companys/qspiders_logo.png"
+                                alt="">
                         </div>
                         <div class="text-center text-black p-2">
                             <img class="mb-3" width="100%" src="assets/images/placement-companys/tap-logo.svg" alt="">
