--- a/refund-policy.html
+++ b/refund-policy.html
@@ -63,13 +63,14 @@
 
             <div class="text-justify p-5">
                 <h2 class="title">The Following parameters are Not Applicable:</h2>
-                <p class="text-black">Returns, Refunds, Late or missing refunds, Sale items, Exchanges, Gifts and Shipping</p>
+                <p class="text-black">Returns, Refunds, Late or missing refunds, Sale items, Exchanges, Gifts and
+                    Shipping</p>
             </div>
 
         </div>
     </section>
     <!-- Terms of Service End here -->
-     
+
     <!-- Footer Start here -->
     <div id="footer"></div>
     <!-- Footer End here -->
