Some Commits Happend Here

--- a/campus.html
+++ b/campus.html
@@ -57,104 +57,76 @@
     </section>
     <!-- Banner Section End here -->
 
-    <!-- Campus Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="row g-4">
-                <div class="col-lg-4 col-md-6 wow fadeInUp my-5" data-wow-delay="0.1s">
-                    <div class="campus-item position-relative h-100">
-                        <div class="campus-text rounded p-5">
-                            <div class="btn-square bg-light rounded-circle mx-auto mb-5">
-                                <img class="img-fluid" src="assets/images/campus/campus.jpg" alt="Icon">
-                            </div>
-                            <h5 class="mb-3">Lab Infrastructure Lab Infrastructure</h4>
+    <!-- Facilities Start -->
+    <div class="text-center">
+        <h2 class="text-white mb-3 px-5 py-2 title" style="color: #9d7651 !important;">Facilities</h2>
+    </div>
+    <div class="container-fluid facilities py-5">
+        <div class="container py-5">
+            <div class="row g-1">
 
-                        </div>
-                        <div class="campus-btn rounded-0 rounded-bottom">
-                                <a class="fw-medium" href="administration.html">Read More<i
-                                        class="bi bi-chevron-double-right ms-2"></i></a>
+                <div class="col-lg-5 pt-3 px-3 d-lg-block d-none">
+                    <div class="p-1 shadow bg-white rounded">
+                        <div class="p-2">
+                            <div class="row g-2">
+                                <div class="col-lg-6"><img class="img-fluid" src="assets/images/contact.jpg" alt="">
+                                </div>
+                                <div class="col-lg-6"><img class="img-fluid" src="assets/images/contact.jpg" alt="">
+                                </div>
+                                <div class="col-lg-6"><img class="img-fluid" src="assets/images/contact.jpg" alt="">
+                                </div>
+                                <div class="col-lg-6"><img class="img-fluid" src="assets/images/contact.jpg" alt="">
+                                </div>
+                                <div class="col-lg-6"><img class="img-fluid" src="assets/images/contact.jpg" alt="">
+                                </div>
+                                <div class="col-lg-6"><img class="img-fluid" src="assets/images/contact.jpg" alt="">
+                                </div>
                             </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp my-5" data-wow-delay="0.1s">
-                    <div class="campus-item position-relative h-100">
-                        <div class="campus-text rounded p-5">
-                            <div class="btn-square bg-light rounded-circle mx-auto mb-5">
-                                <img class="img-fluid" src="assets/images/campus/campus.jpg" alt="Icon">
-                            </div>
-                            <h5 class="mb-3">Lab Infrastructure Lab Infrastructure</h4>
 
-                        </div>
-                        <div class="campus-btn rounded-0 rounded-bottom">
-                                <a class="fw-medium" href="administration.html">Read More<i
-                                        class="bi bi-chevron-double-right ms-2"></i></a>
-                            </div>
+                <div class="col-lg-2 pt-3">
+                    <div class="text-black text-center py-10 rounded"
+                        style="background-color: #dfcfc1; border: 1px solid #9d7651;">
+                        <p>COLLEGE HOSTEL</p>
+                        <p>TRANSPORT FACILITY</p>
+                        <p>CAFETERIA</p>
+                        <p>LIBRARY & INFORMATION CENTER</p>
+                        <p>COLLEGE CANTEEN</p>
+                        <p>INTERNET CENTRE</p>
+                        <p>PLAY GROUND</p>
+                        <p>AUDIO VISUAL FACILITY</p>
+                        <p>SEMINAR HALL</p>
+                        <p>MULTIPURPOSE HALL</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp my-5" data-wow-delay="0.1s">
-                    <div class="campus-item position-relative h-100">
-                        <div class="campus-text rounded p-5">
-                            <div class="btn-square bg-light rounded-circle mx-auto mb-5">
-                                <img class="img-fluid" src="assets/images/campus/campus.jpg" alt="Icon">
-                            </div>
-                            <h5 class="mb-3">Lab Infrastructure Lab Infrastructure</h4>
 
-                        </div>
-                        <div class="campus-btn rounded-0 rounded-bottom">
-                                <a class="fw-medium" href="administration.html">Read More<i
-                                        class="bi bi-chevron-double-right ms-2"></i></a>
+                <div class="col-lg-5 pt-3 px-3 d-lg-block d-none">
+                    <div class="p-1 shadow rounded" style="background-color: #dfcfc1;">
+                        <div class="p-2">
+                            <div class="row g-2">
+                                <div class="col-lg-6"><img class="img-fluid" src="assets/images/contact.jpg" alt="">
+                                </div>
+                                <div class="col-lg-6"><img class="img-fluid" src="assets/images/contact.jpg" alt="">
+                                </div>
+                                <div class="col-lg-6"><img class="img-fluid" src="assets/images/contact.jpg" alt="">
+                                </div>
+                                <div class="col-lg-6"><img class="img-fluid" src="assets/images/contact.jpg" alt="">
+                                </div>
+                                <div class="col-lg-6"><img class="img-fluid" src="assets/images/contact.jpg" alt="">
+                                </div>
+                                <div class="col-lg-6"><img class="img-fluid" src="assets/images/contact.jpg" alt="">
+                                </div>
                             </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp my-5" data-wow-delay="0.1s">
-                    <div class="campus-item position-relative h-100">
-                        <div class="campus-text rounded p-5">
-                            <div class="btn-square bg-light rounded-circle mx-auto mb-5">
-                                <img class="img-fluid" src="assets/images/campus/campus.jpg" alt="Icon">
-                            </div>
-                            <h5 class="mb-3">Lab Infrastructure Lab Infrastructure</h4>
 
-                        </div>
-                        <div class="campus-btn rounded-0 rounded-bottom">
-                                <a class="fw-medium" href="administration.html">Read More<i
-                                        class="bi bi-chevron-double-right ms-2"></i></a>
-                            </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp my-5" data-wow-delay="0.1s">
-                    <div class="campus-item position-relative h-100">
-                        <div class="campus-text rounded p-5">
-                            <div class="btn-square bg-light rounded-circle mx-auto mb-5">
-                                <img class="img-fluid" src="assets/images/campus/campus.jpg" alt="Icon">
-                            </div>
-                            <h5 class="mb-3">Lab Infrastructure Lab Infrastructure</h4>
-
-                        </div>
-                        <div class="campus-btn rounded-0 rounded-bottom">
-                                <a class="fw-medium" href="administration.html">Read More<i
-                                        class="bi bi-chevron-double-right ms-2"></i></a>
-                            </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp my-5" data-wow-delay="0.1s">
-                    <div class="campus-item position-relative h-100">
-                        <div class="campus-text rounded p-5">
-                            <div class="btn-square bg-light rounded-circle mx-auto mb-5">
-                                <img class="img-fluid" src="assets/images/campus/campus.jpg" alt="Icon">
-                            </div>
-                            <h5 class="mb-3">Lab Infrastructure Lab Infrastructure</h4>
-
-                        </div>
-                        <div class="campus-btn rounded-0 rounded-bottom">
-                                <a class="fw-medium" href="administration.html">Read More<i
-                                        class="bi bi-chevron-double-right ms-2"></i></a>
-                            </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
-    <!-- Campus End -->
+    <!-- Facilities End -->
 
     <!-- Upcoming Events Start here -->
     <section id="upcoming">
