Some Commits Happend Here

--- a/index.html
+++ b/index.html
@@ -408,12 +408,12 @@
 
                     <div class="text-center text-black p-2">
                         <img class="mb-3" src="assets/images/placements/salary.png" alt="">
-                        <h4 class="fs-2 fw-bold">₹ 1 LPA</h4>
+                        <h4 class="fs-2 fw-bold">₹ 10 LPA</h4>
                         <span>Highest Salary</span>
                     </div>
                     <div class="text-center text-black p-2">
                         <img class="mb-3" src="assets/images/placements/avg-salary.png" alt="">
-                        <h4 class="fs-2 fw-bold">₹ 0 LPA</h4>
+                        <h4 class="fs-2 fw-bold">₹ 5 LPA</h4>
                         <span>Average Salary</span>
                     </div>
                     <div class="text-center text-black p-2">
@@ -423,7 +423,7 @@
                     </div>
                     <div class="text-center text-black p-2">
                         <img class="mb-3" src="assets/images/placements/offer.png" alt="">
-                        <h4 class="fs-2 fw-bold">5+</h4>
+                        <h4 class="fs-2 fw-bold">45+</h4>
                         <span>Offers</span>
                     </div>
                     <div class="text-center text-black p-2">
@@ -444,28 +444,28 @@
                     <div class="marquee">
 
                         <div class="text-center text-black p-2">
-                            <img class="mb-3 w-75" src="assets/images/placement-companys/Oracle-Academy.jpg" alt="">
+                            <img class="mb-3" src="assets/images/placement-companys/Oracle-Academy.jpg" alt="">
                         </div>
                         <div class="text-center text-black p-2">
-                            <img class="mb-3 w-50" src="assets/images/placement-companys/RH_Academy.jpg" alt="">
+                            <img class="mb-3" src="assets/images/placement-companys/RH_Academy.jpg" alt="">
                         </div>
                         <div class="text-center text-black p-2">
-                            <img class="mb-3 w-100" src="assets/images/placement-companys/omega-logo.svg" alt="">
+                            <img class="mb-3" src="assets/images/placement-companys/omega-logo.svg" alt="">
                         </div>
                         <div class="text-center text-black p-2">
-                            <img class="mb-3 w-100" src="assets/images/placement-companys/tvs-lucas-logo.png" alt="">
+                            <img class="mb-3" src="assets/images/placement-companys/tvs-lucas-logo.png" alt="">
                         </div>
                         <div class="text-center text-black p-2">
-                            <img class="mb-3" width="100%" src="assets/images/placement-companys/ZF_logo.svg" alt="">
+                            <img class="mb-3" src="assets/images/placement-companys/ZF_logo.svg" alt="">
                         </div>
                         <div class="text-center text-black p-2">
-                            <img class="mb-3" width="100%" src="assets/images/placement-companys/Knacktech-logo.png" alt="">
+                            <img class="mb-3" src="assets/images/placement-companys/Knacktech-logo.png" alt="">
                         </div>
                         <div class="text-center text-black p-2">
-                            <img class="mb-3" width="100%" src="assets/images/placement-companys/qspiders_logo.png" alt="">
+                            <img class="mb-3" src="assets/images/placement-companys/qspiders_logo.png" alt="">
                         </div>
                         <div class="text-center text-black p-2">
-                            <img class="mb-3" width="100%" src="assets/images/placement-companys/tap-logo.svg" alt="">
+                            <img class="mb-3" src="assets/images/placement-companys/tap-logo.svg" alt="">
                         </div>
 
 
