--- a/header.html
+++ b/header.html
@@ -198,7 +198,7 @@
             </div>
             <a href="#popupForm" class="nav-item nav-link" data-bs-toggle="modal"
                 data-bs-target="#popupForm">Admission</a>
-            <a href="contact.html" class="nav-item nav-link">EoA</a>
+            <a href="assets/images/Eoa-2024-2025.pdf" class="nav-item nav-link">EoA</a>
             <a href="assets/images/mamce-nirf.pdf" class="nav-item nav-link">NIRF</a>
             <div class="nav-item dropdown">
                 <a href="" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Login</a>
